membuat penambahan script header dan footer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Latihan Git</title>
 </head>
 <body>
+    <header>Ini adalah header</header>
     <h1>Company Profle</h1>
     <p>Anjay Mabar</p>
+    <footer>ini adalah footer</footer>
 </body>
 </html>
