--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,10 @@
     <header>Ini adalah header</header>
     <h1>Contact Us</h1>
     <p>Anjay Mabar</p>  
+
+    <p>contoh perubahan</p>
+
     <footer>ini adalah footer</footer>
+
 </body>
 </html>
